--- a/login.html
+++ b/login.html
@@ -37,7 +37,7 @@
     </div>
   </nav>
 
-  <!-- Bootstrap de login -->
+  <!-- Bootstrap de login.w-->
   <div class="imagen_login" >
   <img src="./img/login.png">
   </div>
