--- a/login.html
+++ b/login.html
@@ -45,7 +45,7 @@
       <h1 class="h3 mb-3 fw-normal">Inicie Sesión</h1>
   
       <div >
-        <input type="text" class="form-control" id="username" placeholder="Nombre de Usuario" required>
+        <input type="text" class="form-control" id="email" placeholder="Email" required>
        
       </div>
       <div >
