--- a/my-profile.html
+++ b/my-profile.html
@@ -26,7 +26,7 @@
   </style>
 </head>
 
-<body>
+<body class="credManBody">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -45,7 +45,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="login.html" id="email">Iniciar Sesión</a>
+            <a class="nav-link" href="credential-manager.html" id="email">Iniciar Sesión</a>
           </li>
         </ul>
       </div>
