--- a/categories.html
+++ b/categories.html
@@ -12,7 +12,7 @@
   <link href="css/styles.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="credManBody">
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark p-1">
     <div class="container">
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -31,7 +31,7 @@
             <a class="nav-link" href="sell.html">Vender</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" id="email" href="login.html">Iniciar Sesión</a>
+            <a class="nav-link" id="email" href="credential-manager.html">Iniciar Sesión</a>
           </li>
         </ul>
       </div>
