--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body class="credManBody">
   <!-- ================================ HEADER ====================================== -->
   <nav>
-    <div class="wrapper">
+    <div class="wrapper col-10">
       <input type="checkbox" id="box">
       <label for="box">
         <div id="button">
