--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/divs-design.css">
   <link rel="stylesheet" href="css/footer.css">
   <link rel="stylesheet" href="css/darkmode.css">
+
   <!-- ================================ Stylesheets ====================================== -->
   <link rel="icon" type="image/x-icon" href="img\favicon.ico">
   <script src="https://kit.fontawesome.com/e6f78feb22.js" crossorigin="anonymous"></script>
@@ -26,7 +27,7 @@
 <body class="credManBody">
   <!-- ================================ HEADER ====================================== -->
   <nav>
-    <div class="wrapper col-10">
+    <div class="wrapper">
       <input type="checkbox" id="box">
       <label for="box">
         <div id="button">
@@ -44,7 +45,8 @@
           <li><a href="about-us.html">Nosotros</a></li>
         </ul>
       </div>
-      <img id="commerceBanner" src="img\logo_commerce.png" alt="commerce-banner">
+      <a href="index.html"><img id="commerceBanner" src="img\logo_commerce.png" alt="commerce-banner"></a>
+      
     </div>
   <!-- =============================== Dropdown =====================================  -->
     <div class="dropdown">
@@ -94,22 +96,22 @@
       <div class="carousel-inner">
         <div id="cars" class="carousel-item active">
           <img src="img/cars_index.jpg" class="d-block w-100 img-carrusel" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h3 class="carrusel-text">Autos</h3>
+          <div class="carousel-caption d-md-block">
+            <h3 id="carrusel-texth3" class="carrusel-text">Autos</h3>
             <p class="carrusel-text">Los mejores precios en autos 0 kilómetro, de alta y media gama.</p>
           </div>
         </div>
         <div id="toys" class="carousel-item">
           <img src="img/toys_index.jpg" class="d-block w-100 img-carrusel" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h3 class="carrusel-text">Juguetes</h3>
+          <div class="carousel-caption d-md-block">
+            <h3 id="carrusel-texth3" class="carrusel-text">Juguetes</h3>
             <p class="carrusel-text">Encuentra aquí los mejores precios para niños/as de cualquier edad.</p>
           </div>
         </div>
         <div id="furniture" class="carousel-item">
           <img src="img/furniture_index.jpg" class="d-block w-100 img-carrusel" alt="...">
-          <div class="carousel-caption d-none d-md-block">
-            <h3 class="carrusel-text">Muebles</h3>
+          <div class="carousel-caption d-md-block">
+            <h3 id="carrusel-texth3" class="carrusel-text">Muebles</h3>
             <p class="carrusel-text">Muebles antiguos, nuevos y para ser armados por uno mismo.</p>
           </div>
         </div>
